[tool.poetry]
name = "embedding-conversion-server"
version = "0.1.0"
description = "Simple server to convert text to embedding before knn and to server an Index"
authors = ["Tejas013 <tejasmadhukar6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
opensearch-py = "^2.4.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
